--- a/find_note test.ipynb
+++ b/find_note test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
     "                        curr = curr+1\n",
     "\n",
     "\n",
-    "    return im,positionList\n",
+    "    return im,imgray,positionList\n",
     "\n",
     "\n",
     "def matrix_radix_sort(matrix):\n",
@@ -61,7 +61,52 @@
     "                order=result[0]\n",
     "                matrix[order]=matrix[order][matrix[order][:,0].argsort()]\n",
     "            hold=matrix[i,1]\n",
-    "    return matrix"
+    "    return matrix\n",
+    "\n",
+    "def classify(array,imgray):\n",
+    "    array=np.append(array,0)\n",
+    "    for i in range(array[1],array[2],-1):\n",
+    "        if imgray[i][array[0]]<100:\n",
+    "            array[3]=1\n",
+    "    return array\n",
+    "#0 means white, 1 means black"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "198.10526315789474\n"
+     ]
+    }
+   ],
+   "source": [
+    "im1=cv2.imread('hold.PNG')\n",
+    "imgray = cv2.cvtColor(im1, cv2.COLOR_BGR2GRAY)\n",
+    "im_1,imgray1,positionList1=find_note(np.copy(im1))\n",
+    "\n",
+    "\n",
+    "array=positionList1[0]\n",
+    "'''\n",
+    "for i in range(array[1],array[2],-1):\n",
+    "    print(imgray[i][array[0]])\n",
+    "'''\n",
+    "mea=imgray[array[2]:array[1],array[0]]\n",
+    "print(np.mean(mea))\n",
+    "#left=132.1875\n",
+    "#right=141.647\n",
+    "#click=179.5\n",
+    "#hold=198.10\n",
+    "#L=193.526\n",
+    "#K=225.722\n",
+    "#!=230.8888\n",
+    "#E=212.777\n",
+    "#F=194.84\n"
    ]
   },
   {
@@ -73,67 +118,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[104  54  40]\n",
-      "[338 154 132]\n"
+      "[[ 1  2  3]\n",
+      " [ 4  5  6]\n",
+      " [ 7  8  9]\n",
+      " [10 11 12]]\n"
      ]
     }
    ],
    "source": [
-    "im1=cv2.imread('two.PNG')\n",
-    "imgray = cv2.cvtColor(im1, cv2.COLOR_BGR2GRAY)\n",
-    "im_1,positionList1=find_note(np.copy(im1))\n",
-    "\n",
-    "for i in positionList1:\n",
-    "    print(i)"
+    "a=np.array([[1,2,3],[4,5,6],[7,8,9],[10,11,12]])\n",
+    "print(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#im1=cv2.imread('L.PNG')\n",
-    "cv2.imshow('001',im_1)\n",
-    "cv2.waitKey()\n",
-    "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def classify(array,imgray):\n",
-    "    for i in range(array[1],array[2],-1):\n",
-    "        if imgray[i][array[0]]<100:\n",
-    "            array=np.append(array,'black')\n",
-    "        else:\n",
-    "            array=np.append(array,'white')\n",
-    "    return array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-21-e3c8185982c0>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-15-9b01ce22e3e9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mclassify\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpositionList1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mimgray\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-8-3c7e461cea77>\u001b[0m in \u001b[0;36mclassify\u001b[1;34m(array, imgray)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mclassify\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mimgray\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0mimgray\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m<\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m             \u001b[0marray\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'black'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-21-e3c8185982c0>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    print(a[[1:3],0])\u001b[0m\n\u001b[1;37m              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "classify(positionList1[0],imgray)"
+    "print(a[[1:3],0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([], dtype=int32)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[0:3,0]"
    ]
   },
   {
